--- a/css/monokai.css
+++ b/css/monokai.css
@@ -1,8 +1,8 @@
 pre.highlight,
-.highlight pre { background-color: #272822; }
-.highlight .hll { background-color: #272822; }
+.highlight pre { background-color: #272822; color: #ccc; }
+.highlight .hll { background-color: #272822; color: #ccc; }
 .highlight .c { color: #75715e } /* Comment */
-.highlight .err { color: #960050; background-color: #1e0010 } /* Error */
+.highlight .err { color: #f6c; } /* Error */
 .highlight .k { color: #66d9ef } /* Keyword */
 .highlight .l { color: #ae81ff } /* Literal */
 .highlight .n { color: #f8f8f2 } /* Name */
