Converting post HTML to Markdown

--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,8 @@
 /* @import url(github-highlight.css); */
 @import url(monokai.css);
 
+.disclaimer { color: #aaa; }
+.text-alert { color: #f00; }
 
 /* Modifications */
 
