Configures Simple-Jeyll-Search to provide search page

--- a/css/main.css
+++ b/css/main.css
@@ -58,3 +58,9 @@ pre.highlight code,
   border: 3px solid #fff;
   border-radius:100%;
 }
+
+/* ************** */
+/* Search */
+#results-container {
+  margin: 40px 25px;
+}
