--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,9 +20,18 @@
 
           <nav class="cover-navigation cover-navigation--primary">
             <ul class="navigation">
-              <li class="navigation__item"><a href="{{ site.baseurl }}#blog" title="link to {{ site.title }} blog" class="blog-button">Blog</a></li>
-              <li class="navigation__item"><a href="{{ site.baseurl }}cheat-sheets" title="link to cheat sheets" class="blog-button">Cheat Sheets</a></li>
-              <li class="navigation__item"><a href="{{ site.baseurl }}presentations" title="link to presentations" class="blog-button">Presentations</a></li>
+              <li class="navigation__item">
+                <a href="{{ site.baseurl }}search" title="Search site">Search</a>
+              </li>
+              <li class="navigation__item">
+                <a href="{{ site.baseurl }}#blog" title="link to {{ site.title }} blog" class="blog-button">Blog</a>
+              </li>
+              <li class="navigation__item">
+                <a href="{{ site.baseurl }}cheat-sheets" title="link to cheat sheets" class="blog-button">Cheat Sheets</a>
+              </li>
+              <li class="navigation__item">
+                <a href="{{ site.baseurl }}presentations" title="link to presentations" class="blog-button">Presentations</a>
+              </li>
             </ul>
           </nav>
 
