--- a/_includes/head.html
+++ b/_includes/head.html
@@ -39,7 +39,8 @@
   <meta name="msapplication-TileColor" content="#ffc40d">
   <meta name="msapplication-TileImage" content="{{ "images/favicons/mstile-144x144.png" | prepend: site.baseurl }}">
   <meta name="theme-color" content="#ffffff">
-  <!-- This is a test {{ "site title: " | prepend: site.title }} -->
+  <!-- url: {{ site.url }} -->
+  <!-- baseurl: {{ site.baseurl }} -->
 
   <link rel="stylesheet" href="{{ "css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
