--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
 
           <nav class="cover-navigation cover-navigation--primary">
             <ul class="navigation">
-              <li class="navigation__item" style="display:none;">
+              <li class="navigation__item">
                 <a href="{{ site.github.url }}/search" title="Search site">Search</a>
               </li>
               <li class="navigation__item">
