--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,12 +13,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="{{ site.title }}">
-  <meta name="twitter:description" content="{{ site.description }}">
+  <meta property="og:site_name" content="{{ site.title }}" />
 
-  <meta property="og:type" content="article">
-  <meta property="og:title" content="{{ site.title }}">
-  <meta property="og:description" content="{{ site.description }}">
+  {% if page.image_url %}
+    <meta name="twitter:image" content="{{ page.image_url | prepend: site.github.url }}" />
+    <meta property="og:image" content="{{ page.image_url | prepend: site.github.url }}" />
+  {% else %}
+    <meta name="twitter:image" content="{{ "/images/profile.jpg" | prepend: site.github.url }}" />
+    <meta property="og:image" content="{{ "/images/profile.jpg" | prepend: site.github.url }}" />
+  {% endif %}
+
+  {% if page.title %}
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="{{ page.title }}" />
+    <meta name="twitter:title" content="{{ page.title }}">
+  {% else %}
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="{{ site.title }}">
+    <meta name="twitter:title" content="{{ site.title }}">
+  {% endif %}
+
+  {% if page.description %}
+    <meta property="og:description" content="{{ page.description }}">
+    <meta name="twitter:description" content="{{ page.description }}">
+  {% else %}
+    <meta property="og:description" content="{{ site.description }}">
+    <meta name="twitter:description" content="{{ site.description }}">
+  {% endif %}
+
 
   <link rel="apple-touch-icon" sizes="57x57" href="{{ "/images/favicons/apple-touch-icon-57x57.png" | prepend: site.github.url }}">
   <link rel="apple-touch-icon" sizes="60x60" href="{{ "/images/favicons/apple-touch-icon-60x60.png" | prepend: site.github.url }}">
