Updates profile photo

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
     <div class="panel-main__inner panel-inverted">
     <div class="panel-main__content">
         <a href="{{ site.github.url | replace: 'http://', '//' }}/" title="link to home of {{ site.title }}">
-          <img src="{{ "/images/profile.jpg" | prepend: site.github.url | replace: 'http://', '//' }}" class="user-image" alt="My Profile Photo">
+          <img src="{{ "/images/profile-2020-12.jpg" | prepend: site.github.url | replace: 'http://', '//' }}" class="user-image" alt="{{ author.name }}">
           <h1 class="panel-cover__title panel-title">{{ site.title }}</h1>
         </a>
         <hr class="panel-cover__divider">
