--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,13 +3,13 @@
   <i class="icon icon-x-circle btn-mobile-close__icon hidden"></i>
 </span>
 
-<header class="panel-cover" style="background-image: url({{ "/images/cover-denver.jp2" | prepend: site.github.url }})">
+<header class="panel-cover" style="background-image: url({{ "/images/cover-denver.jpg" | prepend: site.github.url }})">
   <div class="panel-main">
 
     <div class="panel-main__inner panel-inverted">
     <div class="panel-main__content">
         <a href="{{ site.github.url | replace: 'http://', '//' }}/" title="link to home of {{ site.title }}">
-          <img src="{{ "/images/profile-2020-12.jp2" | prepend: site.github.url | replace: 'http://', '//' }}" class="user-image" alt="{{ author.name }}">
+          <img src="{{ "/images/profile-2020-12.jpg" | prepend: site.github.url | replace: 'http://', '//' }}" class="user-image" alt="{{ author.name }}">
           <h1 class="panel-cover__title panel-title">{{ site.title }}</h1>
         </a>
         <hr class="panel-cover__divider">
