Implement site optimizations as per PageSpeed Insights

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,8 +19,8 @@
     <meta name="twitter:image" content="{{ page.image_url | prepend: site.github.url | replace: 'http://', '//' }}" />
     <meta property="og:image" content="{{ page.image_url | prepend: site.github.url | replace: 'http://', '//' }}" />
   {%- else -%}
-    <meta name="twitter:image" content="{{ "/images/profile-2020-12.jpg" | prepend: site.github.url | replace: 'http://', '//' }}" />
-    <meta property="og:image" content="{{ "/images/profile-2020-12.jpg" | prepend: site.github.url | replace: 'http://', '//' }}" />
+    <meta name="twitter:image" content="{{ "/images/profile-2020-12.webp" | prepend: site.github.url | replace: 'http://', '//' }}" />
+    <meta property="og:image" content="{{ "/images/profile-2020-12.webp" | prepend: site.github.url | replace: 'http://', '//' }}" />
   {%- endif -%}
 
   {%- if page.title -%}
