Added preloading for Foundation icon font

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -57,6 +57,9 @@
   <link rel="icon" type="image/png" href="{{ "/images/favicons/favicon-16x16.png" | prepend: site.github.url | replace: 'http://', '//' }}" sizes="16x16">
   <link rel="manifest" href="{{ "/images/favicons/manifest.json" | prepend: site.github.url | replace: 'http://', '//' }}">
   <link rel="shortcut icon" href="{{ "/images/favicons/favicon.ico" | prepend: site.github.url | replace: 'http://', '//' }}">
+  
+  <link rel="preload" href="/fonts/foundation-icons/foundation-icons.woff" as="font" type="font/woff2" crossorigin>
+  
   <meta name="msapplication-TileColor" content="#ffc40d">
   <meta name="msapplication-TileImage" content="{{ "/images/favicons/mstile-144x144.png" | prepend: site.github.url | replace: 'http://', '//' }}">
   <meta name="theme-color" content="#ffffff">
